src/snapshots/purs_oxide__parser__tests__float_literal.snap
---
source: src/parser.rs
expression: "parse_expr(\"12.34\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 5,
    },
    Literal(
        Float(
            OrderedFloat(
                12.34,
            ),
        ),
    ),
)
