src/snapshots/purs_oxide__parser__tests__float_literal_with_underscores.snap
---
source: src/parser.rs
expression: "parse_expr(\"15_000.0\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 8,
    },
    Literal(
        Float(
            OrderedFloat(
                15000.0,
            ),
        ),
    ),
)
