src/snapshots/purs_oxide__parser__tests__function_as_type_operator.snap
---
source: src/parser.rs
expression: "parse_type(\"(->)\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 4,
    },
    Var(
        Symbol(
            "->",
        ),
    ),
)
