src/snapshots/purs_oxide__parser__tests__instance_4.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            instance Foo Int where\n        \"#))"
---
Located(
    SourceSpan {
        start: 0,
        end: 41,
    },
    Commented(
        [],
        ModuleInner {
            name: QualifiedName(
                Symbol(
                    "Test",
                ),
            ),
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 41,
                    },
                    Commented(
                        [],
                        InstanceChain(
                            [
                                InstanceDeclaration {
                                    constraints: [],
                                    instance_type: Plain,
                                    instance_name: None,
                                    class: QualifiedName(
                                        Symbol(
                                            "Foo",
                                        ),
                                    ),
                                    args: [
                                        Located(
                                            SourceSpan {
                                                start: 31,
                                                end: 34,
                                            },
                                            TypeConstructor(
                                                QualifiedName(
                                                    Symbol(
                                                        "Int",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ],
                                    body: [],
                                },
                            ],
                        ),
                    ),
                ),
            ],
        },
    ),
)
