src/snapshots/purs_oxide__parser__tests__instance_6.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            instance namedInstance :: Foo Int where\n        \"#))"
---
Located(
    SourceSpan {
        start: 0,
        end: 58,
    },
    Commented(
        [],
        ModuleInner {
            name: ModuleId {
                name: "Test",
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 58,
                    },
                    Commented(
                        [],
                        InstanceChain(
                            [
                                InstanceDeclaration {
                                    constraints: [],
                                    instance_type: Plain,
                                    instance_name: Some(
                                        Symbol {
                                            text: "namedInstance",
                                        },
                                    ),
                                    class: QualifiedName {
                                        module: None,
                                        name: Symbol {
                                            text: "Foo",
                                        },
                                    },
                                    args: [
                                        Located(
                                            SourceSpan {
                                                start: 48,
                                                end: 51,
                                            },
                                            TypeConstructor(
                                                QualifiedName {
                                                    module: None,
                                                    name: Symbol {
                                                        text: "Int",
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                    body: [],
                                },
                            ],
                        ),
                    ),
                ),
            ],
        },
    ),
)
