src/snapshots/purs_oxide__parser__tests__instance_chain_2.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            instance Foo Int else\n            instance Foo a\n        \"#))"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 55,
    },
    Commented(
        [],
        ModuleInner {
            name: ModuleId {
                name: "Test",
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        decl: Module(
                            ModuleId {
                                name: "Test",
                            },
                        ),
                        start: 18,
                        end: 54,
                    },
                    Commented(
                        [],
                        InstanceChain(
                            [
                                InstanceDeclaration {
                                    constraints: [],
                                    instance_type: Plain,
                                    instance_name: None,
                                    class: QualifiedName {
                                        module: None,
                                        name: Symbol {
                                            text: "Foo",
                                        },
                                    },
                                    args: [
                                        Located(
                                            SourceSpan {
                                                decl: Module(
                                                    ModuleId {
                                                        name: "Test",
                                                    },
                                                ),
                                                start: 31,
                                                end: 34,
                                            },
                                            TypeConstructor(
                                                QualifiedName {
                                                    module: None,
                                                    name: Symbol {
                                                        text: "Int",
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                    body: [],
                                },
                                InstanceDeclaration {
                                    constraints: [],
                                    instance_type: Plain,
                                    instance_name: None,
                                    class: QualifiedName {
                                        module: None,
                                        name: Symbol {
                                            text: "Foo",
                                        },
                                    },
                                    args: [
                                        Located(
                                            SourceSpan {
                                                decl: Module(
                                                    ModuleId {
                                                        name: "Test",
                                                    },
                                                ),
                                                start: 53,
                                                end: 54,
                                            },
                                            Var(
                                                Symbol {
                                                    text: "a",
                                                },
                                            ),
                                        ),
                                    ],
                                    body: [],
                                },
                            ],
                        ),
                    ),
                ),
            ],
        },
    ),
)
