src/snapshots/purs_oxide__parser__tests__module_name_parser.snap
---
source: src/parser.rs
expression: "super::parse_module_name(indoc!(\"\n        module Foo where\n        import Bar\n        \"))"
---
Some(
    "Foo",
)
