src/snapshots/purs_oxide__parser__tests__module_name_parser_2.snap
---
source: src/parser.rs
expression: "super::parse_module_name(indoc!(\"\n        module Foo.Bar where\n        import Bar\n        \"))"
---
Some(
    "Foo.Bar",
)
