src/snapshots/purs_oxide__parser__tests__negate_1.snap
---
source: src/parser.rs
expression: "parse_expr(\"-5\")"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 2,
    },
    Negate(
        Located(
            SourceSpan {
                decl: Module(
                    ModuleId {
                        name: "Test",
                    },
                ),
                start: 1,
                end: 2,
            },
            Literal(
                Integer(
                    5,
                ),
            ),
        ),
    ),
)
