src/snapshots/purs_oxide__parser__tests__parse_array-3.snap
---
source: src/parser.rs
expression: "parse_expr(r#\" [true, false] \"#)"
---
Located(
    SourceSpan {
        start: 1,
        end: 14,
    },
    Literal(
        Array(
            [
                Located(
                    SourceSpan {
                        start: 2,
                        end: 6,
                    },
                    Literal(
                        Boolean(
                            true,
                        ),
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 8,
                        end: 13,
                    },
                    Literal(
                        Boolean(
                            false,
                        ),
                    ),
                ),
            ],
        ),
    ),
)
