src/snapshots/purs_oxide__parser__tests__parse_array.snap
---
source: src/parser.rs
expression: "parse_expr(r#\" [] \"#)"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 1,
        end: 3,
    },
    Literal(
        Array(
            [],
        ),
    ),
)
